EJBCLIENT-104: run tests with security manager and provide fixes