@@ -70,6 +70,22 @@
                         set by some other tests -->
                     <forkMode>always</forkMode>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>with-security-manager</id>
+                        <inherited>true</inherited>
+                        <configuration>
+                            <!-- -Djava.security.debug=access,failure -->
+                            <argLine>-Dmaven.repo.local=${settings.localRepository} -Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
+                            <reportNameSuffix>with-security-manager</reportNameSuffix>
+                            <!-- <redirectTestOutputToFile>false</redirectTestOutputToFile> -->
+                        </configuration>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions>
             </plugin>
             <!-- Checkstyle -->
             <plugin>
@@ -127,6 +143,13 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jboss.beach.priv-runner</groupId>
+            <artifactId>jboss-beach-priv-runner</artifactId>
+            <version>0.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.marshalling</groupId>
             <artifactId>jboss-marshalling</artifactId>
@@ -204,7 +227,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
